...
    <string name="h_estatura">Introduce tu estatura(cm)</string>
    <string name="h_peso">Introduce tu peso(kg)</string>
    <string name="tv_txt_ly1.1_profile_maxmin">Introduce los valores de glucemia deseados entre 80 y 250 mg/dl</string>
    <string name="h_min">mín.(mg/dl)</string>
    <string name="h_max">máx.(mg/dl)</string>
    <string name="tv_txt_insulina">Insulina del bolo</string>
    <string name="rb_txt_Rápida">Rápida</string>
    <string name="rb_txt_UltraRápida">Ultrarrápida</string>
    <string name="tv_txt_uds">Unidades de insulina</string>
    <string name="bt_guardar">Guardar</string>
    <string name="minmax_incorrecto">Introduce valores min y max de glucemia entre los valores indicados</string>
    <string name="minmax_orden">El valor min de glucemia no puedes ser mayor que el valor máximo</string>
    <string name="textfieldEmpty">Rellene todos los campos</string>
    <string name="noRadioButtonsChecked">Algún elemento sin seleccionar</string>

    <!--- SharedPreferences -->
...


    <!--- Strings de Menu principal -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_menu_principal">Menú Principal</string>
    <string name="acerca_de">UBUDiabetes 2.0 Aplicación de control de la diabetes en dispositivos móviles.\n\</string>
    <string name="bt_bolo">Calcular bolo</string>
    <string name="main_registro">Registro de glucemias</string>
    <string name="main_historial">Historial de glucemias</string>
    <string name="main_registroIngestas">Consultar Ingestas</string>
    <string name="welcome">Bienvenido</string>


...
    <string name="resultado_bolo">Las unidades de insulina necesarias del bolo corrector son: </string>
    <string name="ingerir_carbohidratos">Nivel de glucemia demasiado bajo. Necesita ingerir carbohidratos.</string>
    <string name="bolo">Bolo corrector</string>
    <string name="title_activity_carbohidratos">Carbohidratos</string>
    <string name="tv_carbohidratos">Selecciona el alimento de la ingesta</string>
    <string name="tv_valorgramos">Introduce la cantidad del alimento (Grs)</string>
    <string name="bt_finalizar">Finalizar</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="registro_lista_ingesta_correcta">Lista Ingesta registrada correctamente</string>
    <string name="textregistrando">Registrando datos</string>
    <string name="textregistrofinalizado">Registro finalizado</string>


...
        \t\t\t(Entre 80 y 250 mg/dl)</string>
    <string name="glu_min">Mínimo</string>
    <string name="glu_max">Máximo.</string>
    <string name="decimalesBolo">Decimales en el Bolo Corrector:</string>
    <string name="decimal_bc_cero">Cero</string>
    <string name="decimal_bc_dos">Uno</string>
    <string name="decimal_bc_tres">Dos</string>
    <string name="image_perfil">Imagen</string>

    <!-- Buscador de Alimentos-->
    <string name="buscaralimento">Buscar alimento</string>
    <string name="tv_selecionAlimento">Seleccione alimento</string>
    <!-- Strings nuevos-Cambios -->
...
